# nclone

./: .gitignore  ACTION_MASKING_FIX_SUMMARY.md  ALL_BUGS_FIXED.md  CIRCULAR_TILE_VISUALIZATION_FIX.md  CMakeLists.txt  CODE_CHANGES_SUMMARY.md  COLLISION_OPTIMIZATION_SUMMARY.md  COMPLETE_MOMENTUM_SOLUTION_SUMMARY.md  COMPLETE_N++_INPUT_DECODING_TASK.md  COMPLEXITY_OPTIMIZATION_COMPLETE.md  COORDINATE_FIXES_SUMMARY.md  CRITIC_ARCHITECTURE_ANALYSIS.md  CURRENT_STATUS_SUMMARY.md  DEATH_PENALTY_ANALYSIS.md  DEATH_PENALTY_NECESSITY_ANALYSIS.md  DEATH_PENALTY_TRADEOFFS.md  DECODER_STATUS_SUMMARY.md  DIAGONAL_AND_RAISED_STEEP_FIX.md  ENHANCED_PATHFINDING_DOCUMENTATION.md  ENHANCED_REACHABILITY_SYSTEM.md  EXPLOITATION_FIX_OPTIONS.md  FINAL_COORDINATE_FIXES_SUMMARY.md  FINAL_PERFORMANCE_SUMMARY.md  FINAL_REWARD_SUMMARY.md  FINAL_REWARD_SYSTEM.md  FINAL_SIMPLIFICATION_COMPLETE.md  FINAL_SUMMARY.md  FINAL_TRAINING_FIX_SUMMARY.md  FINAL_VALIDATION_REPORT.md  FLICKERING_FIX_SUMMARY.md  GOAL_ID_ALIAS_BUG_FIX.md  GO_EXPLORE_REWARD_VERIFICATION.md  GRAPH_BUILDING_COMPLEXITY_ANALYSIS.md  GRAPH_DEBUG_IMPLEMENTATION_COMPLETE.md  GRAPH_DEBUG_NEXT_STEPS.md  GRAPH_DEBUG_TOOLS_SUMMARY.md  GRAPH_FIXES_SUMMARY.md  GRAPH_IMPROVEMENTS.md  GRAPH_MEMORY_OPTIMIZATION_SUMMARY.md  GRAPH_MODULE_ANALYSIS.md  (+248 more)
.openhands/: TASKS.md  setup.sh
archive/: graph_builder.py
bc-replays/: 20251022_142125_train_simple_100032.replay
bc_replay/: 20251022_142011_train_very_simple_100004.replay  20251022_142012_train_simple_100005.replay  20251022_142035_train_simple_100008.replay  20251022_142128_train_medium_100033.replay  20251022_142158_train_very_simple_100049.replay  20251022_142159_train_medium_100050.replay  20251022_142227_train_medium_100059.replay  20251022_142259_train_very_simple_100081.replay  20251022_142341_train_medium_100126.replay  20251022_142350_train_medium_100128.replay  20251022_142410_train_very_simple_100144.replay  20251022_142412_train_very_simple_100146.replay  20251022_142444_train_complex_100178.replay  20251022_142504_train_exploration_100198.replay
bc_replays/: 20251012_180456_simple_002.replay  20251012_181306_simple_002.replay  20251012_183106_simple_003.replay  20251013_080814_simple_000.replay  20251013_113945_simple_000.replay  20251013_113948_simple_001.replay  20251013_113950_simple_002.replay  20251013_113953_simple_003.replay  20251013_113957_simple_004.replay  20251013_114000_simple_005.replay  20251013_114003_simple_006.replay  20251013_114006_simple_007.replay  20251013_114009_simple_008.replay  20251013_114014_simple_009.replay  20251013_114027_simple_010.replay  20251013_114036_simple_011.replay  20251013_114046_simple_012.replay  20251013_114054_simple_013.replay  20251013_114106_simple_014.replay  20251013_114118_simple_015.replay  20251013_114124_simple_016.replay  20251013_114132_simple_017.replay  20251013_114142_simple_018.replay  20251013_114213_simple_021.replay  20251013_114223_simple_022.replay  20251013_114230_simple_023.replay  20251013_114241_simple_024.replay  20251013_114252_simple_025.replay  20251013_114300_simple_026.replay  20251013_114305_simple_027.replay  20251013_114332_simple_029.replay  20251013_114340_simple_030.replay  20251013_114347_simple_031.replay  20251013_114353_simple_032.replay  20251013_114401_simple_033.replay  20251013_114408_simple_034.replay  20251013_114414_simple_035.replay  20251013_114422_simple_036.replay  20251013_114430_simple_037.replay  20251013_114437_simple_038.replay  (+135 more)
bc_replays_tmp/: 20251022_142157_train_very_simple_100048.replay  20251209_095406_006 both flavours of ramp jumping (and the control thereof).replay  20251209_095558_006 both flavours of ramp jumping (and the control thereof).replay  20251209_095844_006 both flavours of ramp jumping (and the control thereof).replay  20251209_174750_006 both flavours of ramp jumping (and the control thereof).replay  20251209_174819_006 both flavours of ramp jumping (and the control thereof).replay  20251209_174932_006 both flavours of ramp jumping (and the control thereof).replay
benchmarks/: benchmark_tiered_reachability.py
debug/: README.md  analyze_doortest_issues.py  analyze_graph_fragmentation.py  analyze_map_layout.py  create_test_map.py  debug_all_entity_nodes.py  debug_collision_comparison.py  debug_collision_simple.py  debug_connected_components.py  debug_coordinate_system.py  debug_entity_positions.py  debug_entity_structure.py  debug_escape_logic.py  debug_escape_nodes.py  debug_exact_coordinates.py  debug_functional_edge_rendering.py  debug_functional_edges copy.py  debug_functional_edges.py  debug_graph_connectivity.py  debug_graph_connectivity_detailed.py  debug_graph_issues.py  debug_isolated_nodes.py  debug_level_data.py  debug_mouse_pathfinding.py  debug_nearby_tiles.py  debug_ninja_component.py  debug_ninja_connections.py  debug_ninja_node.py  debug_ninja_spawn.py  debug_node_features copy.py  debug_node_features.py  debug_node_positions.py  debug_sub_grid_map.py  debug_traversability.py  debug_walkable_edges.py  final_validation.py  quick_connectivity_analysis.py  test_with_solid_tiles.py  validate_doortest_map.py
docs/: COMPACT_REACHABILITY_FEATURES_GUIDE.md  CURRICULUM_LEARNING.md  FILE_INDEX.md  GRAPH_FEATURES.md  GRAPH_VISUALIZATION_GUIDE.md  GRAPH_VISUALIZATION_TEST_GUIDE.md  HIERARCHICAL_SUBGOAL_PLANNING.md  HOLISTIC_PATH_EFFICIENCY_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_COMPLETE.md  OBSERVATION_SPACE_ANALYSIS.md  PATH_EFFICIENCY_REWARD_ANALYSIS.md  PHASE1_CHANGES_SUMMARY.md  REACHABILITY_INTEGRATION_EXAMPLES.md  REACHABILITY_SYSTEM_COMPLETE.md  REWARD_SYSTEM.md  SIMPLIFIED_COMPLETION_STRATEGY.md  SUBGOAL_VISUALIZATION_GUIDE.md  SUBGOAL_VISUALIZATION_USAGE.md  TIERED_REACHABILITY_IMPLEMENTATION.md  TIERED_REACHABILITY_SYSTEM.md  graph_visualization_guide.md  mermaid-diagram-instructions.md  minimal_reachability_system.md  multimodal_llm_agent_feasibility.md  pathfinding_strategy.md  performance_optimization.md  reachability_analysis_integration_strategy.md  reachability_system_remaining_fixes.md  reward_structure_analysis.md  sim_mechanics_doc.md  (+4 more)
(+605 files in other folders)
